name:                sodium
version:             0.6
synopsis:            Sodium Reactive Programming (FRP) System
description:         
  A general purpose Reactive Programming (FRP) system. This is part of a project to
  implement reactive libraries with similar interfaces across a range of programming
  languages at <http://reactiveprogramming.org/>
  .
   * Goals include simplicity and completeness.
  .
   * Applicative style: Event implements Functor and Behaviour implements Applicative.
  .
   * Instead of the common approach where inputs are fed into the front of a monolithic
     \'reactimate\', Sodium allows you to push inputs in from scattered places in IO.
  .
   * Integration with IO: Extensible to provide lots of scope for lifting IO into FRP
     logic.
  .
   * Push-based imperative implementation.
  .
  See the /examples/ directory for test cases and examples.
  .
  Changes: 0.2.0.0 fix some value recursion deadlocks and improve docs;
           0.3.0.0 add mergeWith, make cross asynchronous;
           0.4.0.0 API revamp to remove an excess type variable. Parallelism stuff to be rethought;
           0.5.0.0 Improved tests cases + add Freecell example, API tweaks;
           0.5.0.1 Internal improvements;
           0.5.0.2 Fix multiple memory leaks;
           0.6     Minor API changes, particular with accum.
license:             BSD3
license-file:        LICENSE
author:              Stephen Blackheath
maintainer:          http://blacksapphire.com/antispam/
copyright:           (c) Stephen Blackheath 2012
category:            FRP
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  examples/tests/README.txt
                     examples/tests/unit-tests.hs
                     examples/tests/memory-test-1.hs
                     examples/tests/memory-test-2.hs
                     examples/tests/memory-test-3.hs
                     examples/tests/memory-test-4.hs
                     examples/tests/memory-test-5.hs
                     examples/tests/memory-test-6.hs
                     examples/games/poodle.hs
                     examples/games/freecell.hs
                     examples/games/Engine.hs
                     examples/games/Image.hs
                     examples/games/poodle.png
                     examples/games/cards/b1fh.png
                     examples/games/cards/b1fv.png
                     examples/games/cards/b1pb.png
                     examples/games/cards/b1pl.png
                     examples/games/cards/b1pr.png
                     examples/games/cards/b1pt.png
                     examples/games/cards/b2fh.png
                     examples/games/cards/b2fv.png
                     examples/games/cards/b2pb.png
                     examples/games/cards/b2pl.png
                     examples/games/cards/b2pr.png
                     examples/games/cards/b2pt.png
                     examples/games/cards/c10.png
                     examples/games/cards/c1.png
                     examples/games/cards/c2.png
                     examples/games/cards/c3.png
                     examples/games/cards/c4.png
                     examples/games/cards/c5.png
                     examples/games/cards/c6.png
                     examples/games/cards/c7.png
                     examples/games/cards/c8.png
                     examples/games/cards/c9.png
                     examples/games/cards/cj.png
                     examples/games/cards/ck.png
                     examples/games/cards/cq.png
                     examples/games/cards/d10.png
                     examples/games/cards/d1.png
                     examples/games/cards/d2.png
                     examples/games/cards/d3.png
                     examples/games/cards/d4.png
                     examples/games/cards/d5.png
                     examples/games/cards/d6.png
                     examples/games/cards/d7.png
                     examples/games/cards/d8.png
                     examples/games/cards/d9.png
                     examples/games/cards/dj.png
                     examples/games/cards/dk.png
                     examples/games/cards/dq.png
                     examples/games/cards/ec.png
                     examples/games/cards/empty-space.png
                     examples/games/cards/h10.png
                     examples/games/cards/h1.png
                     examples/games/cards/h2.png
                     examples/games/cards/h3.png
                     examples/games/cards/h4.png
                     examples/games/cards/h5.png
                     examples/games/cards/h6.png
                     examples/games/cards/h7.png
                     examples/games/cards/h8.png
                     examples/games/cards/h9.png
                     examples/games/cards/hj.png
                     examples/games/cards/hk.png
                     examples/games/cards/hq.png
                     examples/games/cards/index.html
                     examples/games/cards/jb.png
                     examples/games/cards/jr.png
                     examples/games/cards/licence.txt
                     examples/games/cards/s10.png
                     examples/games/cards/s1.png
                     examples/games/cards/s2.png
                     examples/games/cards/s3.png
                     examples/games/cards/s4.png
                     examples/games/cards/s5.png
                     examples/games/cards/s6.png
                     examples/games/cards/s7.png
                     examples/games/cards/s8.png
                     examples/games/cards/s9.png
                     examples/games/cards/sj.png
                     examples/games/cards/sk.png
                     examples/games/cards/sq.png

source-repository head
  type:     git
  location: https://github.com/kentuckyfriedtakahe/sodium

library
  hs-source-dirs:      src
  exposed-modules:     FRP.Sodium, FRP.Sodium.Internal, FRP.Sodium.Context
  other-modules:       FRP.Sodium.Plain
  build-depends:       base >= 4.3.0.0 && < 4.7.0.0,
                       containers >= 0.4.0.0 && < 0.6.0.0,
                       mtl >= 2.0.0.0 && < 2.2.0.0
